python_svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyhton-deployment1-test
  namespace: apps
  labels:
    app: python-app
spec:
  replicas: 4  
  selector:
    matchLabels:
      app: python-app
  template:
    metadata:
      labels:
        app: python-app
    spec:
      containers:
        - name: python-container
          image: 13455/python:4.0
          ports:
            - containerPort: 5003
          resources:
            requests:
              cpu: 200m # minimo 0.2 core de los 2 
              memory: 100Mi # memoria ram pedida que sea de 1GB
            limits:
              cpu: 500m # maximo de 0.5 core 
              memory: 500Mi # memoria maxima 4-5MB
---

#Service
apiVersion: v1
kind: Service
metadata:
  name: python-service-deployment-1
  namespace: apps
spec:
  selector:
    app: python-app
  ports:
    - name: python-port
      port: 5003
      targetPort: 5003
  type: ClusterIP
