python_svc_gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: python1-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway 
  servers:
  - port:
      number: 80
      name: http-python
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: python1-vs
  namespace: istio-system 
spec:
  hosts:
  - "*"
  gateways:
  - python1-gateway
  http:
  - match: 
    - uri:
        prefix: "/python4.0"
    rewrite:
      uri: "/"
    route:
    - destination:
        host: python-service-deployment-1.apps.svc.cluster.local
        port:
          number: 5003
